buat ldap di mtf

--- a/Reston.Identity/idldap.config
+++ b/Reston.Identity/idldap.config
@@ -51,6 +51,7 @@
 	<add key="LDAP_CONTAINER" value="CN=mtf-App,DC=mtf,DC=com " />
 	<add key="LDAP_USERNAME" value="jafar-PC\jafar" />
 	<add key="LDAP_PASSWORD" value="zaq1234rfvcx" />
+	<add key="LDAP_APPDIR" value="true" />
 	
 	<!--END LDAP-->
 </appSettings>
