--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -56,6 +56,7 @@
 	<add key="KODE_BERITAACARA" value="/MTF-GA/" />
 	<add key="KODE_NOTA" value="/NOTA-GA/MTF/" />
 	<add key="KODE_SPK" value="/SPK-GA/MTF/" />
+	<add key="KODE_PO" value="/MTF-GA/HO/" />
 	<add key="VIEW_BASE_PATH" value="View" />
 	<add key="FILE_UPLOAD_TEMP" value="\Upload\Temp\" />
 	<add key="FILE_UPLOAD_VENDOR" value="\Upload\Vendor\" />
@@ -63,8 +64,9 @@
 	<add key="FILE_UPLOAD_DOC" value="\Upload\Dokumen\Pengadaan\" />
 	<add key="FILE_DOKUMEN_PKS_PATH" value="\Upload\Dokumen\Pks\" />
 	<add key="FILE_DOKUMEN_SPK_PATH" value="\Upload\Dokumen\Spk\" />
+	<add key="FILE_DOKUMEN_PO_PATH" value="\Upload\Dokumen\PO\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
-  
+	
 	<add key="FILE_UPLOAD_DOCPRO" value="D:\\JOB\RESTON BISNIS SOLUSI\\mtf\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
   
 
