--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -154,10 +154,16 @@
     <Content Include="View\approval-perencanaan-belum-disetujui.html" />
     <Content Include="View\approval-perencanaan-sudah-disetujui.html" />
     <Content Include="View\approval-persetujuan-pemenang-belum-disetujui.html" />
+    <Content Include="View\dist\js\rekanan-klarifikasi-lanjutan-harga.js" />
+    <Content Include="View\rekanan-klarifikasi-lanjutan-harga.html" />
+    <Content Include="View\rks-klarifikasi-lanjutan.html" />
     <Content Include="View\create-po.html" />
     <Content Include="View\create-spk.html" />
     <Content Include="View\create-pks.html" />
     <Content Include="View\daftar-hitam.html" />
+    <Content Include="View\dist\js\rks-klarifikasi-lanjutan.js" />
+    <Content Include="View\dist\js\Copy %283%29 of rks-klarifikasi.js" />
+    <Content Include="View\dist\js\create-po.js" />
     <Content Include="View\dist\js\create-spk.js" />
     <Content Include="View\dist\js\create-pks.js" />
     <Content Include="View\dist\js\monitoring-proyek-add.js">
