--- a/Reston.EProc.Web/Reston.EProc.Web.csproj
+++ b/Reston.EProc.Web/Reston.EProc.Web.csproj
@@ -201,6 +201,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BudgetController.cs" />
+    <Compile Include="Controllers\POController.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Controllers\SpkController.cs" />
     <Compile Include="Controllers\PksController.cs" />
     <Compile Include="Controllers\MonitoringSelectionController.cs" />
