persetujuan di setiap tahapan di pengadaan terbuka, diilangin redy di depan pas ngajuain

--- a/.gitignore
+++ b/.gitignore
@@ -963,3 +963,10 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/PO/8b000c51-30d7-40cb-bd89-c56b18ff2937.x
 Reston.EProc.Runner.IIS/Download/Report/Template/Berita Acara Penilaian - Copy.docx
 Reston.EProc.Runner.IIS/Download/Report/Template/BERITA ACARA RAPAT KLARIFIKASI DAN NEGOSIASI - Copy (2).docx
 Reston.EProc.Runner.IIS/View/dist/js/Copy (3) of rks-klarifikasi.js
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPendaftaran-a3a0a02a-d4f3-4815-8ff4-f8941f5c949d.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-859660d9-caab-446a-90a2-ac75e2306d92.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-ca6d51d6-6a58-4fae-ba32-0e16653024f4.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-6f9cd871-e23d-465a-b3ed-f516da4b1477.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-c2a54aac-5feb-4837-91c8-27b85e1501fa.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/96f03f9e-5e35-428e-9027-1d69db4ba1d8.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/a77cdfc2-5dc8-4bae-bdcd-b5173e877fd6.xls
