--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -172,7 +172,9 @@
     </Content>
     <Content Include="View\anggaran.html" />
     <Content Include="View\dist\js\monitoring-proyek-add.js" />
-    <Content Include="View\dist\js\monitoring-proyek-add.min.js" />
+    <Content Include="View\dist\js\monitoring-proyek-add.min.js">
+      <DependentUpon>monitoring-proyek-add.js</DependentUpon>
+    </Content>
     <Content Include="View\pengadaan-detail-terbuka.html" />
     <Content Include="View\repository.html" />
     <Content Include="View\rks-penilaian-buka-amplop.html" />
@@ -1855,6 +1857,7 @@
     <Content Include="Download\Report\Template\undangan pemenanga.docx" />
     <Content Include="data\menu-staff-admin.json" />
     <Content Include="Download\Report\Template\template-hps-new.docx" />
+    <Content Include="Download\Report\Template\template-po.docx" />
     <None Include="pengadaaneDataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>pengadaaneDataSet1.Designer.cs</LastGenOutput>
