--- a/MTF_x/MTF_x.csproj
+++ b/MTF_x/MTF_x.csproj
@@ -188,10 +188,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\AppUser.cs" />
     <Compile Include="Helper\Constants.cs" />
     <Compile Include="Helper\EndpointAndTokenHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -375,6 +377,7 @@
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="fonts\FontAwesome.otf" />
+    <None Include="Properties\PublishProfiles\mtf_x.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\bootstrap-dialog.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -428,15 +431,23 @@
     <Content Include="Views\Home\Announcement.cshtml" />
     <Content Include="Views\Home\DetailData.cshtml" />
     <Content Include="Views\Home\CriteriaQuality.cshtml" />
+    <Content Include="Views\Home\Daftar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Reston.EProc.Model\Reston.Eproc.Model.csproj">
+      <Project>{8dc0a718-f9cc-4661-9209-8ea1b8842572}</Project>
+      <Name>Reston.Eproc.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
