--- a/.gitignore
+++ b/.gitignore
@@ -970,3 +970,8 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-6f9cd871-e23d-465a-b3ed-f5
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-c2a54aac-5feb-4837-91c8-27b85e1501fa.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/96f03f9e-5e35-428e-9027-1d69db4ba1d8.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/a77cdfc2-5dc8-4bae-bdcd-b5173e877fd6.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraAanwijzing-b6b6ecfd-c936-42f7-940a-e5d9a4f2d7c5.xlsx
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-8c7d78dd-e938-4a0c-b667-6426b1a8b0fd.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-32de2e54-3788-47e6-893b-611981673e10.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-aca7c24b-4dd9-4758-8bc2-50856618a67c.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-1c39b203-1c4e-4578-bb5d-456e68ec26dc.xls
