--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -66,6 +66,7 @@
 	<add key="FILE_DOKUMEN_SPK_PATH" value="\Upload\Dokumen\Spk\" />
 	<add key="FILE_DOKUMEN_PO_PATH" value="\Upload\Dokumen\PO\" />
 	<add key="MSC_REGISTRATION_DUE" value="5" />
+	<add key="FILE_REPORT_PATH" value="\Report\" />
 	
 	<add key="FILE_UPLOAD_DOCPRO" value="D:\\JOB\RESTON BISNIS SOLUSI\\mtf\\MTF-FASE-2\\Reston.EProc.Runner.IIS\\UploadDokumenMonitor\\" />
   
