--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -12,7 +12,8 @@
 	<add key="WorkflowTemplateId1" value="1" />
 	<add key="WorkflowTemplateId2" value="2" />
 	<add key="BATASAN_BIAYA" value="50000000" />
-	<add key="BATASAN_BIAYA_DIREKSI" value="1000000000" />
+	<add key="BATASAN_BIAYA_DIREKSI" value="100000000" />
+	<add key="BATASAN_BIAYA_DIRUT" value="1000000000" />
 	
 
 	<!--end-->
