--- a/Reston.Identity/Reston.Identity.csproj
+++ b/Reston.Identity/Reston.Identity.csproj
@@ -1029,6 +1029,7 @@
     <Content Include="idldap.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\identity.pubxml" />
     <None Include="Properties\PublishProfiles\mtf-identity.pubxml" />
     <None Include="Properties\PublishProfiles\mtf-ldap.pubxml" />
     <None Include="Properties\PublishProfiles\release.identity.pubxml" />
