--- a/.gitignore
+++ b/.gitignore
@@ -975,3 +975,7 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraBukaAmplop-8c7d78dd-
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-32de2e54-3788-47e6-893b-611981673e10.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/BeritaAcaraPenentuanPemenang-aca7c24b-4dd9-4758-8bc2-50856618a67c.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-1c39b203-1c4e-4578-bb5d-456e68ec26dc.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/544636fc-413a-41f6-8ee0-7079154d68fa.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/a6d53e6f-a16f-485a-b268-028ea270ff82.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/c28404cc-67d0-425f-8f6b-1ce8bd4b7533.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/f14f4267-d3dd-4210-b9c9-45af91af7ece.xls
