--- a/Reston.Identity/idldap.config
+++ b/Reston.Identity/idldap.config
@@ -47,10 +47,10 @@
 	<add key="LDAP_VERSION" value="3" />
 	<add key="LDAP_FASTBIND" value="false" />
 	<add key="LDAP_ISADAM" value="false" />
-	<add key="LDAP_HOST" value="localhost:389" />
-	<add key="LDAP_CONTAINER" value="CN=mtf,DC=co,DC=id" />
-	<add key="LDAP_USERNAME" value="Tirta Fajar" />
-	<add key="LDAP_PASSWORD" value="harimau123" />
+	<add key="LDAP_HOST" value="localhost:50002" />
+	<add key="LDAP_CONTAINER" value="CN=mtf-App,DC=mtf,DC=com " />
+	<add key="LDAP_USERNAME" value="jafar-PC\jafar" />
+	<add key="LDAP_PASSWORD" value="zaq1234rfvcx" />
 	<add key="LDAP_APPDIR" value="true" />
 	
 	<!--END LDAP-->
