--- a/Reston.EProc.Web/Reston.EProc.Web.csproj
+++ b/Reston.EProc.Web/Reston.EProc.Web.csproj
@@ -201,6 +201,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BudgetController.cs" />
+    <Compile Include="Controllers\WorkflowController.cs" />
     <Compile Include="Controllers\POController.cs">
       <SubType>Code</SubType>
     </Compile>
