Tidak Dimonitoring, Unduh SPK, Unduh Template SPK

--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -1876,6 +1876,7 @@
       <DependentUpon>PO.xsd</DependentUpon>
     </Content>
     <Content Include="data\menu-direksi.json" />
+    <Content Include="Download\Report\Template\SPK2.docx" />
     <None Include="pengadaaneDataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>pengadaaneDataSet1.Designer.cs</LastGenOutput>
