--- a/Reston.EProc.Model/App.config
+++ b/Reston.EProc.Model/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="JimbisEntities" connectionString="Server=TIRTA\SQLEXORESS;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+		<add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
