--- a/Reston.EProc.Runner.IIS/eproc.config
+++ b/Reston.EProc.Runner.IIS/eproc.config
@@ -47,17 +47,19 @@
 	<add key="MAIL_BODY_APPROVER" value="Ada Persetujuan Untuk Pengadaan: " />
 	<add key="MAIL_SUBJECT_APPROVER" value="Pemberitahuan Minta Persetujuan" />
 	
+	<add key="MAIL_PEMENANG_BODY" value="Jakarta, {1}&lt;br&gt;&lt;br&gt;&lt;br&gt;Nomor: {2}.&lt;br&gt;Hal : Pemberitahuan.&lt;br&gt;Lamp : - &lt;br&gt;&lt;br&gt;Kepada Yth.&lt;br&gt;{3}&lt;br&gt;{4}&lt;br&gt;Up. Ibu Devi Aprianty.&lt;br&gt;&lt;br&gt;Sehubungan dengan adanya proses tender {0} maka dengan ini kami sampaikan hal-hal sebagai berikut :&lt;br&gt;1.	Berdasarkan hasil penilaian yang telah dilakukan oleh tim Pengadaan {0}&lt;br&gt;2.	Sehubungan dengan hal tersebut diatas, kami mengucapkan terima kasih, dan tetap mengharapkan partisipasi Saudara dalam mengikuti pengadaan-pengadaan lainnya pada kesempatan mendatang.&lt;br&gt;&lt;br&gt;Demikian untuk dimaklumi. Atas Perhatian dan kerjasamanya kami ucapkan terima kasih.&lt;br&gt;&lt;br&gt;Hormat Kami, &lt;br&gt;&lt;br&gt;&lt;br&gt;Tan Rina&lt;br&gt;Division Head GA, Procurement &amp; Branch Support" />
+	<add key="MAIL_KALAH_BODY" value="Jakarta, {1}&lt;br&gt;&lt;br&gt;&lt;br&gt;Nomor: {2}.&lt;br&gt;Hal : Pemberitahuan.&lt;br&gt;Lamp : - &lt;br&gt;&lt;br&gt;Kepada Yth.&lt;br&gt;{3}&lt;br&gt;{4}&lt;br&gt;Up. Ibu Devi Aprianty.&lt;br&gt;&lt;br&gt;Sehubungan dengan adanya proses tender {0} maka dengan ini kami sampaikan hal-hal sebagai berikut :&lt;br&gt;1.	Berdasarkan hasil penilaian yang telah dilakukan oleh tim Pengadaan {0}&lt;br&gt;2.	Sehubungan dengan hal tersebut diatas, kami mengucapkan terima kasih, dan tetap mengharapkan partisipasi Saudara dalam mengikuti pengadaan-pengadaan lainnya pada kesempatan mendatang.&lt;br&gt;&lt;br&gt;Demikian untuk dimaklumi. Atas Perhatian dan kerjasamanya kami ucapkan terima kasih.&lt;br&gt;&lt;br&gt;Hormat Kami, &lt;br&gt;&lt;br&gt;&lt;br&gt;Tan Rina&lt;br&gt;Division Head GA, Procurement &amp; Branch Support" />
 
-	<add key="MAIL_PEMENANG_SUBJECT" value="Suprisee" />
-	<add key="MAIL_PEMENANG_BODY" value="Horee Kamu Menang" />
-	<add key="MAIL_KALAH_SUBJECT" value="Suprisee" />
-	<add key="MAIL_KALAH_BODY" value="Suprisee" />
+  <add key="MAIL_KALAH_SUBJECT" value="Surat Kalah" />
+  <add key="MAIL_PEMENANG_SUBJECT" value="Surat Menang" />
 	
 	<add key="KODE_PENGADAAN" value="/EPROC/MTF-GA/" />
 	<add key="KODE_BERITAACARA" value="/MTF-GA/" />
 	<add key="KODE_NOTA" value="/NOTA-GA/MTF/" />
 	<add key="KODE_SPK" value="/SPK-GA/MTF/" />
 	<add key="KODE_PO" value="/MTF-GA/HO/" />
+	<add key="KODE_KALAH" value="/SKL-GA/MTF/" />
+	<add key="KODE_MENANG" value="/SMN-GA/MTF/" />
 	<add key="VIEW_BASE_PATH" value="View" />
 	<add key="FILE_UPLOAD_TEMP" value="\Upload\Temp\" />
 	<add key="FILE_UPLOAD_VENDOR" value="\Upload\Vendor\" />
