--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -1877,9 +1877,6 @@
     </Content>
     <Content Include="data\menu-direksi.json" />
     <Content Include="Download\Report\Template\SPK2.docx" />
-    <Content Include="Download\Report\Template\BERITA ACARA BUKA AMPLOP - Copy %282%29.docx" />
-    <Content Include="Download\Report\Template\BERITA ACARA RAPAT KLARIFIKASI DAN NEGOSIASI - Copy %282%29.docx" />
-    <Content Include="Download\Report\Template\NOTA BERSAMA Usulan Pemenang - Copy.docx" />
     <None Include="pengadaaneDataSet1.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>pengadaaneDataSet1.Designer.cs</LastGenOutput>
@@ -2734,6 +2731,7 @@
     </EmbeddedResource>
     <Content Include="Report\BukaAmplop.rdlc" />
     <Content Include="Report\ReportPO.rdlc" />
+    <Content Include="Report\ReportMonitoring.rdlc" />
     <EmbeddedResource Include="Report\po.rdlc" />
     <Content Include="Report\ReportPKS.rdlc" />
     <Content Include="Report\ReportSPK.rdlc" />
