--- a/MTF_x/Web.config
+++ b/MTF_x/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-   <add name="PengadaanContext" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
-    <add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+   <add name="PengadaanContext" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="JimbisEntities" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
