--- a/.gitignore
+++ b/.gitignore
@@ -987,3 +987,4 @@ Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/52c0bbb3-e410-4caa-98d4-1487264450dc.
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/64f5f73c-403c-4eb3-a0ee-f3a213a2ad60.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/7dd8dd97-5587-4490-9c5d-fe4e707b4082.xls
 Reston.EProc.Runner.IIS/Upload/Dokumen/Pks/f2bc0e13-80ae-4f80-840d-fcb4ff62acf2.xls
+Reston.EProc.Runner.IIS/Upload/Dokumen/Pengadaan/NOTA-f48b160c-0105-4e20-8e39-289bf5bc6e15.xls
