--- a/Reston.EProc.Web/Reston.EProc.Web.csproj
+++ b/Reston.EProc.Web/Reston.EProc.Web.csproj
@@ -243,7 +243,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="mockup\bootstrap\css\bootstrap.css.map" />
     <None Include="mockup\bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <None Include="mockup\bootstrap\fonts\glyphicons-halflings-regular.svg" />
