--- a/Reston.Identity/Web.config
+++ b/Reston.Identity/Web.config
@@ -20,7 +20,7 @@
 	  <add name="IdLdapEntities" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
 
 	  <!--<add name="IdLdapEntities" connectionString="Server=192.168.50.111;Database=pengadaane;User ID=sa;Password=30Maret2016;" providerName="System.Data.SqlClient" />-->
-	<add name="JimbisEntities" connectionString="Server=.;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+	<add name="JimbisEntities" connectionString="Server=TIRTA\SQLEXPRESS;Database=Pengadaan.Release;User ID=sa;Password=123456;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <runtime>
