--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -2731,10 +2731,12 @@
     </EmbeddedResource>
     <Content Include="Report\BukaAmplop.rdlc" />
     <Content Include="Report\ReportPO.rdlc" />
-    <Content Include="Report\ReportMonitoring.rdlc" />
     <EmbeddedResource Include="Report\po.rdlc" />
     <Content Include="Report\ReportPKS.rdlc" />
     <Content Include="Report\ReportSPK.rdlc" />
+    <Content Include="Report\ReportPekerjaan.rdlc" />
+    <Content Include="Report\ReportPembayaran.rdlc" />
+    <Content Include="Report\ReportPenilaianVendor.rdlc" />
     <Content Include="Report\ReportMonitoring.rdlc" />
   </ItemGroup>
   <ItemGroup>
