--- a/MTF_x/MTF_x.csproj
+++ b/MTF_x/MTF_x.csproj
@@ -380,6 +380,7 @@
     <None Include="Properties\PublishProfiles\mtf_x.pubxml" />
     <None Include="Properties\PublishProfiles\portal-mtf.pubxml" />
     <None Include="Properties\PublishProfiles\portal.pubxml" />
+    <None Include="Properties\PublishProfiles\portalmrtf.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\bootstrap-dialog.js" />
     <Content Include="Scripts\bootstrap.js" />
