--- a/Reston.Identity/Reston.Identity.csproj
+++ b/Reston.Identity/Reston.Identity.csproj
@@ -262,10 +262,13 @@
     <Content Include="Content\app\images\bg.jpg" />
     <Content Include="Content\app\images\i1.png" />
     <Content Include="Content\app\images\i2.png" />
+    <Content Include="Content\app\images\Left-bg.jpg" />
+    <Content Include="Content\app\images\logo-mtf.png" />
     <Content Include="Content\app\images\mail.png" />
     <Content Include="Content\app\images\name.png" />
     <Content Include="Content\app\images\password.png" />
     <Content Include="Content\app\images\phone.png" />
+    <Content Include="Content\app\images\Right-bg.jpg" />
     <Content Include="Content\app\images\tick.png" />
     <Content Include="Content\app\loginn.html" />
     <Content Include="Content\app\redirect-login.js" />
