--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -155,6 +155,10 @@
     <Content Include="View\approval-perencanaan-sudah-disetujui.html" />
     <Content Include="View\approval-persetujuan-pemenang-belum-disetujui.html" />
     <Content Include="View\approval-user-terkait.html" />
+    <Content Include="View\dist\img\details_close.png" />
+    <Content Include="View\dist\img\details_open.png" />
+    <Content Include="View\dist\img\DiagramPlot.jpg" />
+    <Content Include="View\dist\img\favicon.ico" />
     <Content Include="View\dist\js\workflow.js" />
     <Content Include="View\dist\js\rekanan-klarifikasi-lanjutan-harga.js" />
     <Content Include="View\dist\js\rks-penilaian-buka-amplop.js" />
