--- a/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
+++ b/Reston.EProc.Runner.IIS/Reston.EProc.Runner.IIS.csproj
@@ -1874,6 +1874,8 @@
     </Content>
     <Content Include="data\menu-direksi.json" />
     <Content Include="Download\Report\Template\SPK2.docx" />
+    <Content Include="Download\Report\Template\BERITA ACARA RAPAT KLARIFIKASI DAN NEGOSIASI LANJUTAN new.docx" />
+    <Content Include="Download\Report\Template\Berita Acara Penilaian new.docx" />
     <None Include="Properties\PublishProfiles\efe.pubxml" />
     <None Include="Properties\PublishProfiles\eproc-mtf.pubxml" />
     <None Include="Properties\PublishProfiles\eproc.pubxml" />
