--- a/Reston.Identity/idldap.config
+++ b/Reston.Identity/idldap.config
@@ -47,9 +47,9 @@
 	<add key="LDAP_VERSION" value="3" />
 	<add key="LDAP_FASTBIND" value="false" />
 	<add key="LDAP_ISADAM" value="false" />
-	<add key="LDAP_HOST" value="localhost:389" />
-	<add key="LDAP_CONTAINER" value="CN=mtf,DC=co,DC=id" />
-	<add key="LDAP_USERNAME" value="HARRY" />
+	<add key="LDAP_HOST" value="localhost:50011" />
+	<add key="LDAP_CONTAINER" value="CN=reston,DC=co,DC=co" />
+	<add key="LDAP_USERNAME" value="harry" />
 	<add key="LDAP_PASSWORD" value="123456" />
 	<add key="LDAP_APPDIR" value="true" />
 	
